Fix message enricher paramter passing